Fixed alignment on rating score

--- a/src/components/LandLord-Info/LandlordProfile.css
+++ b/src/components/LandLord-Info/LandlordProfile.css
@@ -18,12 +18,13 @@
 }
 
 .profile-other {
-  align-items: flex-start;
+  align-items: left;
   text-align: flex-start;
+
 }
 
 .rating {
-  display: flex;
+  width: 350px; 
   flex-direction: column;
   align-items: flex-start;
   margin-bottom: 20px;
@@ -53,6 +54,7 @@
 .rating-summary {
   font-size: 16px;
   margin-top: 20px;
+  align-items: baseline;
 }
 
 .landlord-info {
