--- a/src/components/LandLord-Info/Review.css
+++ b/src/components/LandLord-Info/Review.css
@@ -38,7 +38,6 @@
   height: 40px;
   display: flex;
   align-items: center;
-  justify-content: center;
   border-radius: 50%;
   margin-top: 5px;
 }
